--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
     <div class="bot-link">
       <p>🤖 Наш бот прийому заявок:</p>
-      <a href="https://t.me/uadmin_order_bot" target="_blank">@uadmin_order_bot</a>
+      <a href="https://t.me/uadmin_support_bot" target="_blank">@uadmin_support_bot</a>
     </div>
 
   </section>
