--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <li>Встановлення камер відеоспостереження з доступом через смартфон</li>
           <li>Обслуговування принтерів, онлайн-кас, сканерів</li>
           <li>Підбір техніки для бізнесу та дому</li>
-          <li>Консультації з кібербезпеки та стабільності</li>
+          <li>Консультації</li>
         </ul>
       </div>
       <div class="cta-button">
