--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     header {
       position: relative;
-      background-image: url('assets/bg-header.jpg');
+      background-image: url('assets/header-bg.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
