--- a/index.html
+++ b/index.html
@@ -239,10 +239,10 @@
     <div class="slider-container" id="photo-slider" style="position: relative; width: 100%; max-width: 960px; margin: 0 auto;">
       <div class="slider-track" id="slider-track" style="display: flex; transition: transform 0.3s ease;">
         <img src="assets/logo.png" alt="Фото 1" style="width: 250px; flex-shrink: 0; margin-right: 15px; border-radius: 12px;">
-        <img src="https://picsum.photos/id/1016/250/150" alt="Фото 2" style="width: 250px; flex-shrink: 0; margin-right: 15px; border-radius: 12px;">
-        <img src="https://picsum.photos/id/1018/250/150" alt="Фото 3" style="width: 250px; flex-shrink: 0; margin-right: 15px; border-radius: 12px;">
-        <img src="https://picsum.photos/id/1019/250/150" alt="Фото 4" style="width: 250px; flex-shrink: 0; margin-right: 15px; border-radius: 12px;">
-        <img src="https://picsum.photos/id/1020/250/150" alt="Фото 5" style="width: 250px; flex-shrink: 0; margin-right: 15px; border-radius: 12px;">
+        <img src="assets/servis.jpg" alt="Фото 2" style="width: 250px; flex-shrink: 0; margin-right: 15px; border-radius: 12px;">
+        <img src="assets/wlan.png" alt="Фото 3" style="width: 250px; flex-shrink: 0; margin-right: 15px; border-radius: 12px;">
+        <img src="assets/security.jpg" alt="Фото 4" style="width: 250px; flex-shrink: 0; margin-right: 15px; border-radius: 12px;">
+        <img src="assets/backup.jpg" alt="Фото 5" style="width: 250px; flex-shrink: 0; margin-right: 15px; border-radius: 12px;">
       </div>
       <!-- Кнопки управления -->
       <button id="prevBtn" aria-label="Назад" style="
